# osskins

./: .eslintrc.json  .gitignore  GITHUB_SECRETS_SETUP.md  LICENSE  PARTY_MODE_FIX_TEST_RESULTS.md  PARTY_MODE_TEST_SUMMARY.md  README.md  READY_TO_RELEASE.md  SIMPLE_UPDATER_SETUP.md  UPDATER_COMPLETE.md  UPDATER_COMPLETE_GUIDE.md  UPDATER_IMPLEMENTATION.md  UPDATER_SETUP.md  UPDATER_UI_DOCUMENTATION.md  eslint.config.mjs  et HEAD~1  index.html  next.config.js  next.config.ts  package.json  pnpm-lock.yaml  theme.json  todo.md  tsconfig.json
.github/instructions/: instructions.instructions.md
.github/workflows/: build-manifest.yml  lint-js.yml  lint-rs.yml  pages.yml  publish-updates.yml  release.yml
docs/: .nojekyll  index.html  manifest.json
mock-lcu-server/: README.md  dashboard.html  index.js  package.json  pnpm-lock.yaml  server.cert  server.key  test-partymode.js
mock-lcu-server/mock-league-dir/: lockfile
scripts/: prepare-cslol-tools.mjs  show-github-secret.sh  show-signing-keys.sh
src/: theme.json
src-tauri/: .taurignore  Cargo.toml  build.rs  run-party-tests.ps1  run-party-tests.sh  tauri.conf.json  tauri.conf.json.pub  tauri.key.pub  test_output.txt
src-tauri/capabilities/: default.json
src-tauri/resources/: injection.rs  injection.rs.bak
src-tauri/resources/cslol-manager-source-code/cslol-tools/src/: main_mod_tools.cpp
src-tauri/resources/cslol-manager-source-code/src/: CSLOLToolsImpl.cpp
src-tauri/resources/cslol-manager-source-code/src/qml/: CSLOLDialogOpenZipFantome.qml  CSLOLDialogSaveZipFantome.qml  main.qml
src-tauri/resources/cslol-tools/: config.json
src-tauri/src/: commands.rs  debug_matchmaking.rs  debug_swift_play.rs  injection.rs  lib.rs  main.rs
src-tauri/src/commands/: app_control.rs  champion_data.rs  config.rs  config_lock.rs  custom_skins.rs  data_updates.rs  download_manager.rs  file_operations.rs  lcu_communication.rs  lcu_watcher.rs  league_detection.rs  misc_items.rs  mod.rs  party_mode.rs  skin_injection.rs  skin_management.rs  tools.rs  types.rs
src-tauri/src/commands/lcu_watcher/: injection.rs  logging.rs  mod.rs  party_mode.rs  session.rs  types.rs  utils.rs  watcher.rs
src-tauri/src/commands/party_mode/: commands.rs  handlers.rs  lcu.rs  messaging.rs  mod.rs  party_detection.rs  session.rs  tests.rs  types.rs  utils.rs
src-tauri/src/commands/party_mode/tests/: README.md  TEST_ANALYSIS.md  TEST_OVERVIEW.md  mod.rs  test_aram_mode.rs  test_helpers.rs  test_injection_logic.rs  test_party_detection.rs  test_race_conditions.rs  test_session_state.rs  test_swift_aram.rs  test_swift_play.rs  test_timing_edge_cases.rs
src-tauri/src/injection/: cache.rs  core.rs  error.rs  fantome.rs  file_index.rs  game_config.rs  injector.rs  mod.rs  mod_tools.rs  skin_file.rs  types.rs  utils.rs
src/app/: actions.ts  error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
src/app/api/champions/: route.ts
src/app/api/custom-skins/: route.ts  route.ts.bak
src/app/champions/: page.tsx
src/components/: AppInitializer.tsx  AppUpdateBanner.tsx  AppUpdateDialog.tsx  ChampionCard.tsx  ChampionGrid.tsx  ChampionSearch.tsx  ChromaSelector.tsx  CslolManagerModal.tsx  CustomSkinCard.tsx  CustomSkinItem.tsx  CustomSkinList.tsx  CustomSkinRenameDialog.tsx  DataUpdateModal.tsx  DownloadCenter.tsx  DownloadingModal.tsx  InjectionStatusDot.tsx  LoadingModal.tsx  ManualInjectionPreviewDialog.tsx  ManualSkinCard.tsx  ManualSkinGrid.tsx  MiscCard.tsx  MiscItemView.tsx  PartyChatLog.tsx  PartyModeDialog.tsx  PrintLogsButton.tsx  ReleaseNotesDialog.tsx  SettingsDialog.tsx  SkinCard.tsx  SkinGrid.tsx  Splash.tsx  TerminalLogsDialog.tsx  ThemeToneSelector.tsx  UpdateModal.tsx  button-injection.tsx
src/components/download/: DataUpdateModal.tsx  DownloadCenter.tsx  DownloadingModal.tsx  UpdateModal.tsx  index.ts
src/components/game-directory/: GameDirectorySelector.tsx
src/components/layout/: TopBar.tsx
src/components/onboarding/: HelpButton.tsx  OnboardingTour.tsx  onboarding.css
src/components/providers/: PartyModeProvider.tsx  ThemeInitializer.tsx  data-update-provider.tsx
src/components/skin-injection/: InjectionStatusDot.tsx  SkinInjectionButton.tsx
src/components/ui/: FloatingButton.tsx  MenuBar.tsx  button.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  select.tsx
src/components/ui/titlebar/: TitleBar.tsx
src/lib/: data-utils.ts  download-utils.ts  i18n.tsx  imageCache.ts  store.ts  types.ts
src/lib/api/: download.ts  manual-injection.ts  party-mode.ts  skin-management.ts
src/lib/hooks/: use-cached-image.ts  use-champion-persistence.ts  use-champions.ts  use-config-loader.ts  use-custom-skins.ts  use-data-update.ts  use-debounce.ts  use-initialization.ts  use-misc-items.ts  use-skin-card-logic.ts  use-skin-sync.ts  use-soft-updater.ts  useDownloadingModal.ts
src/lib/store/: downloads.ts  index.ts  party-mode.ts  tools.ts  updater.ts
src/lib/store/slices/: customSkinsSlice.ts  favoritesSlice.ts  gameSlice.ts  miscSlice.ts  skinSlice.ts  uiSlice.ts
src/lib/types/: party-mode.ts
src/lib/utils/: champion-utils.ts  slugify.ts  smart-search.ts
src/locales/: ar.json  de.json  en.json  es.json  fr.json  ko.json  pt-BR.json  ru.json  tr.json  vi.json  zh.json
src/utils/: api.ts
