[package]
name = "osskins"
version = "1.1.1"
description = "Osskins"
authors = ["abdelrhmanx74"]
license = ""
repository = ""
default-run = "osskins"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "osskins_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }
cmake = "0.1"
winres = "0.1"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.5.1", features = ["tray-icon"] }
tauri-plugin-fs = { version = "2.3.0", features = ["watch"] }
tauri-plugin-opener = "2.3.1"
tauri-plugin-shell = "2.2.2"
windows = { version = "0.61", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_System_Memory", "Win32_System_ProcessStatus", "Win32_Security"] }
winapi = { version = "0.3", features = ["processthreadsapi", "memoryapi", "handleapi", "errhandlingapi", "winnt"] }
walkdir = "2.4.0"
chrono = "0.4.41"
web-sys = { version = "0.3.67", features = ["Window", "Document"] }
zip = "4.3" # Added for .fantome file extraction
reqwest = { version = "0.12.22", features = ["blocking", "rustls-tls", "json"] }
base64 = "0.22"
once_cell = "1.18.0"      # For lazy initialization
memmap2 = "0.9.7"         # For memory-mapped files
rayon = "1.8.0"           # For parallel processing
md5 = "0.8.0"             # Added for overlay cache hash generation
wait-timeout = "0.2.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
