[package]
name = "osskins"
version = "1.5.8"
description = "Osskins"
authors = ["abdelrhmanx74"]
license = ""
repository = ""
default-run = "osskins"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "osskins_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.13", features = [] }
winres = "0.1"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.6.2", features = ["tray-icon"] }
tauri-plugin-fs = { version = "2.2.1", features = ["watch"] }
tauri-plugin-opener = "2.2.6"
tauri-plugin-process = "2"
tauri-plugin-shell = "2.0.0-beta.2"
tauri-plugin-updater = "2"
windows = { version = "0.52", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_Security"
] }
winapi = { version = "0.3", features = ["processthreadsapi", "memoryapi", "handleapi", "errhandlingapi", "winnt"] }
walkdir = "2.4.0"
chrono = "0.4.31"
web-sys = { version = "0.3.67", features = ["Window", "Document"] }
zip = "0.6" # Added for .skin_file file extraction
sevenz-rust = "0.6" # For extracting 7z SFX archives (.exe files) as fallback
reqwest = { version = "0.12.15", features = ["blocking", "rustls-tls", "json", "stream"] }
base64 = "0.21"
once_cell = "1.18.0"      # For lazy initialization
memmap2 = "0.9.0"         # For memory-mapped files
rayon = "1.8.0"           # For parallel processing
md5 = "0.7.0"             # Added for overlay cache hash generation
uuid = { version = "1.0", features = ["v4"] } # For generating unique IDs
tokio = { version = "1.0", features = ["full"] } # For async operations
tokio-util = { version = "0.7", features = ["rt"] }
rfd = "0.14" # For file dialogs
percent-encoding = "2.3"
copypasta = "0.8"
futures-util = "0.3"
notify = "6.1" # For file system watching - provides instant lockfile detection

# WebSocket for LCU event stream
tungstenite = { version = "0.23", features = ["native-tls"] }
native-tls = "0.2"
url = "2.5"
http = "1.1"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

## tauri-plugin-updater removed
